# voice-conversion-wasm

./: .gitignore  CMakeLists.txt  COMBINED_QUALITY_ANALYSIS.md  COMPONENTS_GUIDE.md  DEVELOPMENT_RULES.md  OPTIMIZATION.md  PRESENTATION_GUIDE.md  QUALITY_ANALYSIS.md  QUICK_REFERENCE.md  README.md  RECONSTRUCTION_GUIDE.md  TIME_STRETCH_QUALITY_ANALYSIS.md  build-dist.sh  build.sh  dev.sh  index.html  main.cpp  main.js  main.wasm  runserver.sh  setup_emscripten.sh  vercel.json  watch.sh
.claude/: project_rules.md  settings.local.json
benchmark_result/: benchmark_combined_report.html  benchmark_combined_report.json  benchmark_partialsegment_report.html  benchmark_partialsegment_report.json  benchmark_pitchshift_report.html  benchmark_pitchshift_report.json  benchmark_timestretch_report.html  benchmark_timestretch_report.json  comprehensive_benchmark_report.html
docs/: IMPLEMENTATION_SUMMARY.md  NEW_ARCHITECTURE.md  QUICK_START.md
src/: main.cpp
tests/: CMakeLists.txt  benchmark_combined  benchmark_combined.cpp  benchmark_partialsegment  benchmark_partialsegment.cpp  benchmark_pitchshift  benchmark_pitchshift.cpp  benchmark_timestretch  benchmark_timestretch.cpp  build_all_benchmarks.sh  build_benchmark.sh  build_benchmark_combined.sh  build_benchmark_timestretch.sh  build_edit_pipeline_test.sh  build_reconstruction_test.sh  build_test.sh  create_tabbed_report.sh  listening_test.html  run_all_benchmarks.sh  test_edit_pipeline  test_edit_pipeline.cpp  test_pitch_analyzer.cpp  test_reconstruction.cpp
web/: benchmark  editor.html  index.html  main.js  main.wasm
(+173 files in other folders)
